--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,9 +24,22 @@ h1, h2, h3, h4, h5, h6 {
 
 
 body{
-    background: linear-gradient(76.26deg, rgba(161, 95, 203, 0.05) 11.58%, rgba(127, 105, 231, 0.05) 37.95%, rgba(106, 115, 244, 0.05) 48%, rgba(99, 120, 247, 0.05) 59.3%, rgba(89, 138, 243, 0.05) 70.6%, rgba(98, 167, 222, 0.05) 84.41%, rgba(118, 192, 195, 0.05) 103.25%);
     overflow-x: hidden;
+background-color:#060914 ; 
 
+}
+.bm{
+    background-image: url("/images/hero3.webp");
+    width: 100%;
+    height: 100vh;
+    background-size: 100% 100%;
+background-repeat: no-repeat;
+
+}
+.moon{
+    background-color: rgba(0, 0, 0, 0.425);
+    width: 100%;
+    height: 100vh;
 }
 
 a{
