--- a/src/styles/etc.css
+++ b/src/styles/etc.css
@@ -47,61 +47,46 @@ font-family: "Squartiqa4F", sans-serif;
    
 }
 /* back styles*/
-
 .hold{
-    margin-top: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
-    background-image: url("/images/try.jpg");
+
+   
     width:97%;
     height: fit-content;
     padding-bottom:50px ;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    clip-path: polygon(0px 6px, 6px 0px, calc(100% - 6px) 0px, 100% 6px, 100% calc(100% - 6px), calc(100% - 6px) 100%, 6px 100%, 0px calc(100% - 6px));
-display: flex;
+
 }
 .hold .left{
-    padding-top: 7%;
-    padding-left: 3%;
+    padding-top: 15%;
+   
      color: white;
 }
 
 .one{
-    font-size: 64px;
-    line-height: 1.18;
-    letter-spacing: 0.16rem;
-   
-    font-family: "Squartiqa4F", sans-serif;
+    color: #fff;
+    margin-bottom: 20px;
+    font-size: 48px;
+    font-weight: 700;
+    margin-left: 31%;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 .one span{
-    font-family: "Squartiqa4F", sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
     -webkit-text-fill-color: rgba(0, 0, 0, 0);
     background: linear-gradient(76.26deg, rgb(161, 95, 203) 11.58%, rgb(127, 105, 231) 37.95%, rgb(106, 115, 244) 48%, rgb(99, 120, 247) 59.3%, rgb(89, 138, 243) 70.6%, rgb(98, 167, 222) 84.41%, rgb(118, 192, 195) 103.25%) text;
 }
 .tense{
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 1.35;
-    letter-spacing: 0.42rem;
-    text-transform: uppercase;
-    margin-top: 5%;
+    margin-right: 15%;
+    font-family: "Rubik", Sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    width: 70%;
+text-align: center;
+margin-left: 17%;
+    line-height: 1.3em;
 }
-.wt{
-    margin-top: 5%;
-    display: flex;
-    align-items: center;
-    
-}
-.wt .tx{
-    margin-left: 30px;
-    font-size: 22px;
-    line-height: 1.18;
-    letter-spacing: 0.16rem;
-   
-    font-family: "Squartiqa4F", sans-serif;
-}
+
 
 .icsp{
     display: flex;
@@ -112,7 +97,7 @@ display: flex;
     gap: 16px;
     background: linear-gradient(76.26deg, rgba(161, 95, 203, 0.25) 11.58%, rgba(127, 105, 231, 0.25) 37.95%, rgba(106, 115, 244, 0.25) 48%, rgba(99, 120, 247, 0.25) 59.3%, rgba(89, 138, 243, 0.25) 70.6%, rgba(98, 167, 222, 0.25) 84.41%, rgba(118, 192, 195, 0.25) 103.25%);
     padding: 16px 24px;   
-    margin-top: 7%;
+    margin-top: 15%;
     margin-bottom: 7%;
     margin-left: 20px;
 }
@@ -122,33 +107,9 @@ display: flex;
    font-size: 25px;
 }
 
-.rf{
-    display: flex;
 
-}
-.rf img{
-    display: block;
-    width: 14%;
-    margin-right: 10px;
-}
 
-.cert{
-    margin-top: 20px;
-    width:20%;
-}
 
-.right{
-    backdrop-filter: blur(10px);
-    clip-path: polygon(0px 8px, 8px 0px, calc(100% - 8px) 0px, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0px calc(100% - 8px));
-    gap: 16px;
-    background: linear-gradient(76.26deg, rgba(161, 95, 203, 0.25) 11.58%, rgba(127, 105, 231, 0.25) 37.95%, rgba(106, 115, 244, 0.25) 48%, rgba(99, 120, 247, 0.25) 59.3%, rgba(89, 138, 243, 0.25) 70.6%, rgba(98, 167, 222, 0.25) 84.41%, rgba(118, 192, 195, 0.25) 103.25%);
-   height: 100vh;
-width: 40%;
-margin-top: 4%;
-margin-right: 7%;
-padding: 30px;
-text-align: center;
-}
 .io{
     color: white;
     margin-left: 30px;
@@ -159,22 +120,72 @@ text-align: center;
     font-family: "Squartiqa4F", sans-serif;
     margin-top: 20px;
 }
-
-.lo ,.rd{
-    margin-left: 30px;
-    font-size: 22px;
-    line-height: 1.18;
-    letter-spacing: 0.16rem;
-   
-    font-family: "Squartiqa4F", sans-serif; 
-background: linear-gradient(92.39deg, #E0BB55 -2.5%, #EDE87B 18.24%, #CE9327 38.98%, #D7AA3E 56.43%, #F0E97C 69.87%, #E9D66B 80.46%, #CF9526 101.2%);
--webkit-text-fill-color: rgba(0, 0, 0, 0);
-    background-clip: text;
-    margin-bottom: 30px;
-    margin-top: 5px;
+/* about page*/
+.bout{
+    margin-top: 20px;
+    margin-left: 10%;
 }
-.lk{
+.abu{
+    font-size: 14px;
+    font-weight: 500;
+    padding: 0;
+    line-height: 1px;
+    margin: 0;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    color: rgb(221, 221, 221);
+    position: relative;
+}
+
+.abu::after {
+    content: "";
+    width: 120px;
+    height: 1px;
+    display: inline-block;
+    background: orange;
+    margin: 4px 10px;
+   
+}
+
+
+
+.lx h3{
+font-weight: 500;
+   
+    font-size: 17px;
+}
+
+.dld{
     display: flex;
+}
+li{
+    list-style: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.lk{
+display: flex;
     width: 100%;
     align-items: center;
      margin-top: 30px;
@@ -482,3 +493,7 @@ margin-top: 30px;
     height: 100px;
     width: 250px;
   }
+
+
+
+
