--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,253 +1,177 @@
-.footer{
-  
-    background-image: url("/images/try.jpg");
-    width:100%;
-    height: 100%;
-    
-    background-size: 100% 100%;
-    background-repeat: no-repeat;   
-   
+.site-footer
+{
+    margin-top: 5%;
+  background-color:#26272b;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#737373;
 }
-.xd{
-    background: linear-gradient(76.26deg, rgba(161, 95, 203, 0.25) 11.58%, rgba(127, 105, 231, 0.25) 37.95%, rgba(106, 115, 244, 0.25) 48%, rgba(99, 120, 247, 0.25) 59.3%, rgba(89, 138, 243, 0.25) 70.6%, rgba(98, 167, 222, 0.25) 84.41%, rgba(118, 192, 195, 0.25) 103.25%);
-
-     width:100%;
-    height: 100%;
- 
-    background-size: 100% 100%;
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
 }
-.ft{
-    font-size: 60px;
-    line-height: 1.25;
-    font-family: "Squartiqa4F", sans-serif;
-    text-transform: uppercase;
-    font-weight: 400; 
-    color:white;
-    margin-left: 10%;
+.site-footer hr.small
+{
+  margin:20px 0
 }
-.ft span , .la a{
-    font-family: "Squartiqa4F", sans-serif;
-    text-transform: uppercase;
-    font-weight: 400; 
-    -webkit-text-fill-color: rgba(0, 0, 0, 0);
-    background: linear-gradient(76.26deg, rgb(161, 95, 203) 11.58%, rgb(127, 105, 231) 37.95%, rgb(106, 115, 244) 48%, rgb(99, 120, 247) 59.3%, rgb(89, 138, 243) 70.6%, rgb(98, 167, 222) 84.41%, rgb(118, 192, 195) 103.25%) text;
+.site-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
 }
-
-.gyh{
-    
-    width:100%;
-    backdrop-filter: blur(10px);
-    clip-path: polygon(0px 8px, 8px 0px, calc(100% - 8px) 0px, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0px calc(100% - 8px));
-    background: linear-gradient(76.26deg, rgba(161, 95, 203, 0.25) 11.58%, rgba(127, 105, 231, 0.25) 37.95%, rgba(106, 115, 244, 0.25) 48%, rgba(99, 120, 247, 0.25) 59.3%, rgba(89, 138, 243, 0.25) 70.6%, rgba(98, 167, 222, 0.25) 84.41%, rgba(118, 192, 195, 0.25) 103.25%);
-    padding: 16px 24px;   
-    margin-top: 7%;
-    margin-bottom: 7%;
-    margin-left: 20px;
+.site-footer a
+{
+  color:#737373;
 }
-
-.lk{
-    font-family: "Squartiqa4F", sans-serif;
-    font-size: 16px;
-    color:white;
-    font-weight: 400;
-    line-height: 1.6;
-    letter-spacing: .085em;
-    text-transform: uppercase;
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
 }
-
-
-.fj{
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 1.3;
-    letter-spacing: .175rem;
-    text-transform: uppercase;
-    color: rgba(255, 255, 255, .6);
+.footer-links
+{
+  padding-left:0;
+  list-style:none
 }
-
-.la{
-    display:flex;
-align-items: center;
-justify-content: space-between;
-
-margin-top: 10px;
-
-width: 100%;
+.footer-links li
+{
+  display:block
 }
-.la a{
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
+  }
+}
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a.facebook:hover
+{
+  background-color:#3b5998
+}
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
+}
+.social-icons a.linkedin:hover
+{
+  background-color:#007bb6
+}
+.social-icons a.dribbble:hover
+{
+  background-color:#ea4c89
+}
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
     display:block;
-    font-size: 12px;
-    width: 100%;
-  margin-left: 45%;
-  transition: all .5s;
-}
-.la a:hover{
-    transform: translateY(-3px);
+    margin-right:0;
+    font-weight:600
+  }
 }
 
-.cl img{
-    width:20%;
-}
 
-.mv{
+.cer .row{
     display: flex;
-    margin-right: 5%;
-    margin-left: 3%;
-    margin-top: 50px;
-}
-
-.dh{
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    padding: 10px;
-border: 3px solid grey;
-border-right-color: rgba(99, 121, 247, 0.329); 
-border-left-color: rgba(78, 103, 248, 0.507); 
-border-bottom-color:rgb(127, 105, 231);
-border-top-color: rgb(161, 95, 203) ;   
-text-align: center;
-font-size: 20px;
-display: block;
-cursor: pointer;
-margin-right: 10px;
-}
-.lh{
-    display: flex;
-    margin-left: 5%;
-}
-.mk{
-    border: 2px solid rgb(161, 95, 203) ;
-    clip-path: polygon(0px 8px, 8px 0px, calc(100% - 8px) 0px, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0px calc(100% - 8px));
-padding: 10px 15px;
-width: fit-content;
-background: linear-gradient(76.26deg, rgb(161, 95, 203) 11.58%, rgb(127, 105, 231) 37.95%, rgb(106, 115, 244) 48%, rgb(99, 120, 247) 59.3%, rgb(89, 138, 243) 70.6%, rgb(98, 167, 222) 84.41%, rgb(118, 192, 195) 103.25%) text;
-font-weight: 400; 
-cursor: pointer;
--webkit-text-fill-color: rgba(0, 0, 0, 0);
-}
-
-.fl{
-    display:flex;
+    padding-left: 5%;
     justify-content: space-between;
-    margin-right:5% ;
-}
-
-
-.ip{
-    display: flex;
-    align-items: center;
-    width: fit-content;
-    backdrop-filter: blur(10px);
-    clip-path: polygon(0px 8px, 8px 0px, calc(100% - 8px) 0px, 100% 8px, 100% calc(100% - 8px), calc(100% - 8px) 100%, 8px 100%, 0px calc(100% - 8px));
-    gap: 16px;
-    background: linear-gradient(76.26deg, rgba(161, 95, 203, 0.25) 11.58%, rgba(127, 105, 231, 0.25) 37.95%, rgba(106, 115, 244, 0.25) 48%, rgba(99, 120, 247, 0.25) 59.3%, rgba(89, 138, 243, 0.25) 70.6%, rgba(98, 167, 222, 0.25) 84.41%, rgba(118, 192, 195, 0.25) 103.25%);
-    padding: 16px 24px;   
-    margin-top: 1%;
-    margin-bottom: 7%;
-    margin-left: 20px;
-}
-
-.ip i{
-    background: linear-gradient(76.26deg, rgb(161, 95, 203) 11.58%, rgb(127, 105, 231) 37.95%, rgb(106, 115, 244) 48%, rgb(99, 120, 247) 59.3%, rgb(89, 138, 243) 70.6%, rgb(98, 167, 222) 84.41%, rgb(118, 192, 195) 103.25%) text;
-    -webkit-text-fill-color: rgba(0, 0, 0, 0);
-    font-size: 25px;  
-    transition: all .5s;
-}
-.ip i:hover{
-    transform: translateY(-5px);
-}
-.dwnnav{
-    background-image: url("/images/tg.jpg");
-    width:100%;
-    height: 100%;
-    padding-bottom:.2% ;
-    
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-        padding-top: 1%;
-}
-
-
-.gv{
-    display: flex;
-    align-items: flex-start;
-    position: relative;
-    padding-top: 88px;
-    padding-bottom: 88px;
-    margin-left: 5%;
-}
-
-.rt{
-    text-align: center;
-
-    background: linear-gradient(76.26deg, #A15FCB 11.58%, #7F69E7 37.95%, #6A73F4 48%, #6378F7 59.3%, #598AF3 70.6%, #62A7DE 84.41%, #76C0C3 103.25%);
-
-font-size: 16px;
-font-weight: 400;
-line-height: 1.6;
-letter-spacing: .085em;
-text-transform: uppercase;
--webkit-text-fill-color: rgba(0, 0, 0, 0);
-    background-clip: text;
-
-font-family: "Squartiqa4F", sans-serif;
-
-}
-
-
-
-.abt{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 7.5%;
-}
-.seri{
-    width: fit-content;
+    padding-right: 5%;
    
-    color: #fff;
-    padding: 5px 0;
-    margin: 5px 0;  
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 1.3;
-    letter-spacing: .175rem;
-    text-transform: uppercase;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
 }
 
-.last{
-    display: flex;
-    justify-content: space-between;
-    gap: 24px;
-    border-top: 1px solid rgba(255, 255, 255, .12);
-    padding-top: 30px;
-    padding-bottom: 32px;
-    padding-left: 2%;
-    padding-right: 4%;
-}
-
-.last p{
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 1.3;
-    letter-spacing: .14rem;
-    text-transform: uppercase;
-    color: rgba(255, 255, 255, .65);
-}
-.e{
-    margin-left: 50%;
-}
-
-.grt{
-    margin-top: 10%;
-}
-
-
-.sx{
-    font-size: 28px;
-    color: white;
-    margin-left: 0%;
+.o{
+    width: 50%;
 }
