--- a/src/styles/news.css
+++ b/src/styles/news.css
@@ -94,7 +94,7 @@ padding-left: 3%;
  justify-content: space-between;
 
 margin-right: 5%;
-  
+  margin-left: 10%;
 }
 .nav .r{
   font-size: 14px;
@@ -107,7 +107,7 @@ margin-right: 5%;
   margin: 0px 14px;
   transition: all 5ms linear 0s;
   cursor:pointer;
-
+padding:15px 0px;
 }
 .r{
   color: rgb(226, 226, 226);
@@ -140,12 +140,19 @@ margin-right: 5%;
 }
 
 .mr{
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   padding: 10px 15px;
   width:fit-content;
-  color: white;
+  color: rgb(0, 0, 0);
   display: none;
   position: relative;
 top: 30%;
-
+position: absolute;
+margin-top: 40px;
+font-size: 19px;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.mr:hover{
+  display: block;
+  
 }
