--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,14 +28,7 @@ body{
 background-color:#060914 ; 
 
 }
-.bm{
-    background-image: url("/images/hero3.webp");
-    width: 100%;
-    height: 100vh;
-    background-size: 100% 100%;
-background-repeat: no-repeat;
 
-}
 .moon{
     background-color: rgba(0, 0, 0, 0.425);
     width: 100%;
@@ -94,3 +87,7 @@ border-radius: 50%;
     display:none;
 }
 
+.gl{
+    margin-top: 4%;
+    margin-left: 43%;
+}
