--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -3,7 +3,9 @@
     width: 100%;
     height: 100%;
   }
-  
+  .rf{
+    word-spacing: 0px;
+  }
   .section-header {
     text-align: center;
     margin: 0 auto;
