--- a/src/styles/etc.css
+++ b/src/styles/etc.css
@@ -47,21 +47,18 @@ font-family: "Squartiqa4F", sans-serif;
    
 }
 /* back styles*/
-.hold{
 
-   
-    width:97%;
-    height: fit-content;
-    padding-bottom:50px ;
-
-}
-.hold .left{
-    padding-top: 15%;
-   
+.eft{
      color: white;
+     
+    width: 100%;
+    height: 100vh;
+    background-size: 100% 100%;
+background-repeat: no-repeat;
 }
 
 .one{
+    padding-top: 15%;
     color: #fff;
     margin-bottom: 20px;
     font-size: 48px;
@@ -69,6 +66,9 @@ font-family: "Squartiqa4F", sans-serif;
     margin-left: 31%;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+}
+.fv{
+        margin-left: 40%;
 }
 .one span{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
